# counters

./: .editorconfig  .eslintignore  .eslintrc.js  .valalintignore  README.md  docs.json  meson.build  meson_options.txt  package.json  tsconfig.json
.github/workflows/: build.yml
build-aux/flatpak/: io.gitlab.guillermop.Counters.json
data/: io.gitlab.guillermop.Counters.appdata.xml.in.in  io.gitlab.guillermop.Counters.data.gresource.xml  io.gitlab.guillermop.Counters.desktop.in.in  io.gitlab.guillermop.Counters.gschema.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: days-row.blp  dialog.blp  help-overlay.blp  history-card.blp  inner-page.blp  main-page.blp  preferences.blp  row.blp  window.blp
gi-types/: adw1.d.ts  counters1.d.ts  gdk4.d.ts  gio2.d.ts  glib2.d.ts  gobject2.d.ts  gtk4.d.ts
lib/: counters.vala  meson.build
po/: POTFILES  counters.pot  es.po  meson.build
src/: io.gitlab.guillermop.Counters.in  io.gitlab.guillermop.Counters.src.gresource.xml.in  main.ts  meson.build
src/common/: action.ts  date_utils.ts  decorators.ts  interfaces.ts
src/models/: categories.ts  category.ts  counter.ts  counters.ts  entry.ts  interval.ts  settings.ts
src/storage/: builder.ts  database.ts
src/widgets/: chart.ts  days_row.ts  dialog.ts  history_card.ts  index.ts  inner_page.ts  list_box.ts  main_page.ts  preferences.ts  progress_ring.ts  row.ts  window.ts
types/: ambient.d.ts  gi.d.ts
